--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -1,4 +1,3 @@
-version: '3:8'
 services:
   app:
     build:
@@ -6,7 +5,7 @@ services:
     ports:
       - "3000"
     env_file:
-      - .env
+      - ./backend/.env
     volumes:
       - ./backend:/app
       - /app/node_modules
@@ -17,15 +16,11 @@ services:
   project-postgres-db:
     image: postgres:16.1
     ports:
-      - '${POSTGRES_PORT}:5432'
-    environment:
-     POSTGRES_USER: '${POSTGRES_USER:-user}'
-     POSTGRES_PASSWORD: '${POSTGRES_PASSWORD:-password}'
-     POSTGRES_DB: '${POSTGRES_DB:-project-for-school}'
+      - '5433:5432'
     env_file:
-      - .env
+      - ./backend/.env
     volumes:
-      - ./project-for-school-api-db:/var/lib/postgresql/project-for-school
+      - project-for-school-api-db:/var/lib/postgresql/data
     restart: on-failure
     healthcheck:
       test: ["CMD","pg_isready","-U", "postgres"]
@@ -51,7 +46,7 @@ services:
       - "9000:9000"
       - "9001:9001"
     volumes:
-      - ./project-for-school-api-s3-data:/usr/src/app/s3
+      - project-for-school-api-s3-data:/usr/src/app/s3
     environment:
       - MINIO_ROOT_USER=user
       - MINIO_ROOT_PASSWORD=password
